# RAG7

./: PRD.md  RAG_OPTIMIZATION_PLAN.md  README.md
app/: README_BACKEND.md  package-lock.json  package.json
app/scripts/: migrate-docker.ps1  migrate-docker.sh  migrate.js
app/src/: middleware.ts
app/src/app/: globals.css  page.tsx
app/src/app/api/db/chats/: route.ts
app/src/app/api/db/chats/[id]/: route.ts
app/src/app/api/db/chats/[id]/messages/: route.ts
app/src/app/api/db/messages/: route.ts
app/src/app/api/db/rag-settings/: route.ts
app/src/app/dashboard/: page.tsx
app/src/app/import/: page.tsx
app/src/app/settings/: page.tsx
app/src/components/: chat-ui.tsx  chroma-health-check.tsx  dashboard-navbar.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  scalability.tsx  value-props.tsx
app/src/lib/: api-client.ts  chunk.ts  db-client.ts  db-connection-test.ts  db.ts
app/supabase/migrations/: add-model-settings.sql  create-chats-and-messages-tables.sql  create-document-summaries-table.sql  create-professionals-table.sql  create-rag-settings-table.sql  create-tables-without-users.sql  drop-professionals-table.sql  remove-user-id-columns.sql
backend/: .dockerignore  .gitignore  Dockerfile  chat_service.py  check_mcp_server.py  chroma_client.py  docker-compose.yml  document_summarizer.py  embeddings.py  github_scraper.py  main.py  mcp_prompts.py  mcp_resources.py  mcp_server.py  mcp_tools.py  pyproject.toml  rag_config.py  requirements.txt  run_migration.py  system_prompt.py  test_mcp_server.py  test_mcp_simple.py  web_scraper.py
