[project]
name = "dss-knowledge-base"
version = "0.1.0"
description = "DSS Knowledge Base Backend with MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.0",
    "chromadb==1.3.0",
    "python-dotenv==1.0.1",
    "pydantic>=2.10.0,<3.0.0",
    "openai==1.71.0",
    "psycopg2-binary==2.9.9",
    "fastmcp>=0.9.0",
    "requests>=2.31.0",
    # Note: crawl4ai requires uvloop which doesn't support Windows natively
    # On Windows, use WSL/Docker. The code handles missing crawl4ai gracefully.
    "crawl4ai==0.6.2",
]

[project.optional-dependencies]
web-scraping = [
    "crawl4ai==0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

